[package]
name = "thumbor"
description = "Rust client for the Thumbor image service. Provides a convenient builder API"
version = "0.1.11"
repository = "https://github.com/SteelAlloy/thumbor-rs"
documentation = "https://docs.rs/thumbor"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.62"
authors = ["SteelAlloy"]
categories = ["web-programming", "multimedia::images"]
keywords = ["client", "thumbor", "crop", "resize", "image"]

# https://docs.rs/katex-doc/0.1.0/katex_doc/
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cargo = "deny"
pedantic = "deny"

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
hmac = "0.12.1"
sha1 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }
bon = "3.3.2"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
